2005-07-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimppaletteview.[ch]: new widget which manages the
	selected palette entry itself and emits "selected", "activated"
	and "context" signals. Not used yet.

	* app/widgets/gimpviewrendererpalette.[ch]: reimplemented palette
	drawing: added optional grid drawing and APIs to configure the
	renderer. Should be ready for the palette editor now.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): implement it the same way as
	gimp_palette_get_preview(). Can't be used for the palette editor
	yet.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpviewrendererpalette.[ch]: new view renderer,
	does nothing yet except chaining up in ::render().

	* app/widgets/gimpviewrenderer-utils.c
	(gimp_view_renderer_type_by_viewable_type): use it for palettes.

2005-07-13  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-grid.c
	* plug-ins/gfig/gfig.h: applied a patch by Ted Shaneyfelt that
	addresses parts of bug 151092: less sectors on inner, more sectors
	on outer tracks. 

2005-07-13  Sven Neumann  <sven@gimp.org>

	* app/base/Makefile.am
	* app/base/segmentator.[ch]: renamed to siox.[ch].

	* app/base/siox.[ch]: added API docs and a link to the algorithm's
	new homepage. Removed unused code.

	* app/core/gimpdrawable-foreground-extract.c: changed accordingly.

2005-07-13  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette.c (gimp_palette_add_entry): actually return
	the added entry, and not always the palette's last entry (argh!).

	* app/widgets/gimppaletteeditor.c: make sure the cursor is always
	on the newly added color. Really fixes #15060 this time.

2005-07-13  Sven Neumann  <sven@gimp.org>
